Add lenience to the time scale declaration.
Refs #111987